Add endpoint to view categories by guest user
