# public/swagger/swagger.yml
@@ -128,3 +128,22 @@ paths:
         500:
           description: Internal server error
       security: []
+
+  /api/v1/categories:
+    get:
+      tags:
+        - Categories
+      summary: List all categories
+      operationId: categories-listing
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: Page not found
+        422:
+          description: Unprocessable Entity
+        500:
+          description: Internal server error
+      security: []
